<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_meeting_edit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_bg_table"
    android:orientation="vertical">


    <include
        android:id="@+id/icld_edit_meeting_edit"
        layout="@layout/home_include_back_title" />

    <LinearLayout
        android:id="@+id/ll_bottom_btn"
        android:layout_width="wrap_content"
        android:layout_height="29dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="19dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_edit_meeting"
            android:layout_width="110dp"
            android:layout_height="29dp"
            android:background="@drawable/home_bg_new_btn_common"
            android:text="@string/home_meeting_save" />

        <Button
            android:id="@+id/btn_del_meeting"
            android:layout_width="110dp"
            android:layout_height="29dp"
            android:layout_marginStart="30dp"
            android:background="@drawable/home_bg_new_btn_common"
            android:text="删除" />
    </LinearLayout>


    <ScrollView
        android:id="@+id/slv_meeting"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/ll_bottom_btn"
        android:layout_below="@id/icld_edit_meeting_edit"
        android:layout_marginBottom="19dp"
        android:layout_marginTop="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/home_bg_white_table">

                <TextView
                    style="@style/home_tv_new_meeting"
                    android:text="@string/home_meeting_issue" />

                <EditText
                    android:id="@+id/edt_home_meeting_issue"
                    style="@style/home_edt_new_meeting"
                    android:hint="@string/home_meeting_issue" />

                <View style="@style/home_common_line" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/home_bg_white_table">

                <TextView
                    style="@style/home_tv_new_meeting"
                    android:text="@string/home_meeting_site" />

                <View style="@style/home_common_line" />

                <EditText
                    android:id="@+id/edt_home_meeting_site"
                    style="@style/home_edt_new_meeting"
                    android:layout_alignParentTop="true"
                    android:hint="@string/home_meeting_site" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:background="@drawable/home_bg_white_table"
                android:minHeight="50dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/home_meeting_person"
                    android:textColor="@color/home_common_000000" />


                <Button
                    android:id="@+id/btn_person_clear"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="16dp"
                    android:text="清空" />

                <EditText
                    android:id="@+id/edt_home_meeting_man"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="14dp"
                    android:layout_marginStart="89dp"
                    android:layout_marginTop="10dp"
                    android:layout_toStartOf="@id/btn_person_clear"
                    android:background="@null"
                    android:focusable="false"
                    android:gravity="top"
                    android:hint="@string/home_meeting_person"
                    android:textColor="@color/home_common_434242"
                    android:textColorHint="@color/home_common_9CA0A4"
                    android:textSize="14sp" />

                <View
                    android:layout_width="1dp"
                    android:minHeight="50dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="86dp"
                    android:background="#000" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/home_bg_white_table">

                <TextView
                    style="@style/home_tv_new_meeting"
                    android:text="@string/home_meeting_compere" />

                <EditText
                    android:id="@+id/edt_home_meeting_compere"
                    style="@style/home_edt_new_meeting"
                    android:hint="@string/home_meeting_compere" />

                <View style="@style/home_common_line" />
            </RelativeLayout>

            <RelativeLayout
                android:minHeight="100dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:background="@drawable/home_bg_white_table">

                <TextView
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/home_meeting_content"
                    android:textColor="@color/home_common_000000" />

                <EditText
                    android:id="@+id/edt_home_meeting_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="14dp"
                    android:layout_marginStart="89dp"
                    android:layout_marginTop="10dp"
                    android:background="@null"
                    android:gravity="top"
                    android:minHeight="80dp"
                    android:textColor="@color/home_common_434242"
                    android:textSize="14sp" />
                <View
                    android:layout_width="1dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="86dp"
                    android:background="#000000" />
                <View
                    android:layout_width="1dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="86dp"
                    android:layout_alignParentBottom="true"
                    android:background="#000000" />
                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_alignTop="@id/edt_home_meeting_content"
                    android:layout_alignBottom="@id/edt_home_meeting_content"
                    android:layout_marginStart="86dp"
                    android:background="#000000" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/home_bg_white_table">

                <TextView
                    style="@style/home_tv_new_meeting"
                    android:text="@string/home_meeting_time" />

                <EditText
                    android:id="@+id/edt_home_meeting_time"
                    style="@style/home_edt_new_meeting"
                    android:hint="@string/home_meeting_time" />

                <View style="@style/home_common_line" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/home_bg_white_table">

                <TextView
                    style="@style/home_tv_new_meeting"
                    android:text="@string/home_meeting_department" />

                <EditText
                    android:id="@+id/edt_home_meeting_department"
                    style="@style/home_edt_new_meeting"
                    android:hint="@string/home_meeting_department" />

                <View style="@style/home_common_line" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/home_bg_white_table">

                <TextView
                    style="@style/home_tv_new_meeting"
                    android:text="@string/home_meeting_recorder" />

                <TextView
                    android:id="@+id/tv_home_meeting_recorder"
                    style="@style/home_edt_new_meeting"
                    android:hint="@string/home_meeting_recorder" />

                <View style="@style/home_common_line" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_home_meeting_picture"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:background="@drawable/home_bg_white_table"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginStart="12dp"
                    android:orientation="horizontal">

                    <View
                        android:layout_marginStart="0dp"
                        style="@style/home_common_line"/>
                    <RelativeLayout
                        android:id="@+id/rl_meeting_img1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:visibility="invisible">

                        <ImageView
                            android:id="@+id/iv_meeting_1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="3dp"
                            android:scaleType="fitXY" />

                        <ImageView
                            android:id="@+id/iv_delmeeting_1"
                            android:layout_width="12dp"
                            android:layout_height="12dp"
                            android:layout_alignParentEnd="true"
                            android:src="@mipmap/home_iv_report_delete" />

                    </RelativeLayout>

                    <View
                        android:layout_marginStart="0dp"
                        style="@style/home_common_line"/>

                    <RelativeLayout
                        android:id="@+id/rl_meeting_img2"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:visibility="invisible">

                        <ImageView
                            android:id="@+id/iv_meeting_2"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="3dp"
                            android:scaleType="fitXY" />

                        <ImageView
                            android:id="@+id/iv_delmeeting_2"
                            android:layout_width="12dp"
                            android:layout_height="12dp"
                            android:layout_alignParentEnd="true"
                            android:src="@mipmap/home_iv_report_delete" />

                    </RelativeLayout>

                    <View
                        android:layout_marginStart="0dp"
                        style="@style/home_common_line"/>

                    <RelativeLayout
                        android:id="@+id/rl_meeting_img3"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:visibility="invisible">

                        <ImageView
                            android:id="@+id/iv_meeting_3"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="3dp"
                            android:scaleType="fitXY" />

                        <ImageView
                            android:id="@+id/iv_delmeeting_3"
                            android:layout_width="12dp"
                            android:layout_height="12dp"
                            android:layout_alignParentEnd="true"
                            android:src="@mipmap/home_iv_report_delete" />

                    </RelativeLayout>

                    <View
                        android:layout_marginStart="0dp"
                        style="@style/home_common_line"/>

                    <RelativeLayout
                        android:id="@+id/rl_meeting_img4"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:visibility="invisible">

                        <ImageView
                            android:id="@+id/iv_meeting_4"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="3dp"
                            android:scaleType="fitXY" />

                        <ImageView
                            android:id="@+id/iv_delmeeting_4"
                            android:layout_width="12dp"
                            android:layout_height="12dp"
                            android:layout_alignParentEnd="true"
                            android:src="@mipmap/home_iv_report_delete" />

                        <View
                            android:layout_marginStart="0dp"
                            style="@style/home_common_line"/>
                    </RelativeLayout>

                </LinearLayout>


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:background="@drawable/home_bg_white_table"
                android:minHeight="38dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="12dp"
                    android:text="添加图片"
                    android:textColor="@color/home_common_000000" />

                <Button
                    android:id="@+id/btn_add_pic"
                    android:layout_width="wrap_content"
                    android:layout_height="38dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="16dp"
                    android:text="添加图片" />

                <View
                    android:layout_height="38dp"
                    style="@style/home_common_line"/>
                <View
                    android:layout_below="@id/btn_add_pic"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#000"/>

                <com.hyjt.home.mvp.ui.view.addpicview.AddPicView
                    android:id="@+id/add_pic_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginBottom="10dp"
                    android:visibility="gone" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_recy_attachment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:background="@drawable/home_bg_white_table">

                <TextView
                    android:id="@+id/tv_recy_attachment"
                    style="@style/home_tv_new_meeting"
                    android:text="附件列表" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recy_attachment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_recy_attachment" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="41dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/home_bg_white_table">


                <View
                    android:layout_marginStart="116dp"
                    style="@style/home_common_line"/>


                <TextView
                    style="@style/home_tv_new_meeting"
                    android:text="添加会议问题" />


                <Button
                    android:id="@+id/btn_new_question"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="16dp"
                    android:text="新增问题" />
            </RelativeLayout>


            <LinearLayout
                android:id="@+id/ll_question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:orientation="vertical">

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>